Version 7.44 - not yet released
* tracking
  - xcsoar-cloud-service: rebuild service, new domain cloud.xcsoar.org
* data files
  - fix problem (introduced in v7.42) of first waypoint in user.cup waypoint
    file being ignored or being overwritten by any Waypoint Editor dialog
    function.
  - read PG landing waypoint type correctly in cup files
* ui
  - streamlined, and optimized icons
  - apply dark mode settings to thermal assistant
  - apply dark mode to large flarm radar
  - add options to avoid infoboxes to flarm radar widget
  - changed location of setting for flarm radar position
  - Flarm gauge: when traffic is farther than 4 km away, it disappears
  - add new gesture ULDR to access quick menu
  - add quick menu page buttons in case of touch screen
  - add quit button to quick menu
  - infoboxen: new setting, allow scaling of title/comment font
  - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
  - Add new Infobox “Home altitude difference” (Home AltD)
  - add helpers on infoboxes for Argentinean contests 95% distance rule
  - Popup messages now appear at the top of the map
  - FlarmTrafficWindow: align colors of FlarmTraffic with map for consistency
* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
* Windows
  - Popupmessages are now shown with full text again
* devices
  - Add driver for Condor 3
  - Add driver for LX Navigation Eos / Era variometers

Version 7.43 - 2024-08-12
* calculations
  - CRITICAL: reachable map labels show correct altitude with head wind #1424
  - CRITICAL: fix reachability calculation with older compilers (OpenVario,..)
* airspace
  - add classes according the OpenAir extended format AY tag