@@ -576,7 +576,7 @@ rules. \label{conf:taskrules}\index{Aufgabe!Regeln Voreinstellung}
    {\bf OLC Classic}: Bis zu sieben Punkte einschließlich Start und Ziel, Ankunftshöhe nicht
    mehr als 1000m unter der Abflughöhe. \\
    {\bf OLC League}: Der aktuelle Contest mit Sprint-Wettbewerbsregeln.
-   Aus dem OLC Classic Dreieck wird das 2,5 Stunden Fenster mit dem besten Schnitt herausgschnitten. 
+   Aus dem OLC Classic Dreieck wird das 2 Stunden Fenster mit dem besten Schnitt herausgschnitten. 
    Ankunftshöhe darf nicht unter Abflughöhe liegen.\\
   {\bf OLC Plus}: Kombination aus Classic und FAI Regeln. 30\% der FAI Punkte werden zur
    Classic Wertung dazugezählt \\
