@@ -580,7 +580,7 @@ rules. \label{conf:taskrules}
   {\bf OLC Classic}: Up to seven points including start and finish, finish height
   must not be lower than start height less 1000~m. \\
   {\bf OLC League}: A contest on top of the classic task optimisation, cutting
-  a 2.5~hours segment over max.\ 3 of the turns. Finish height must not be below
+  a 2~hours segment over max.\ 3 of the turns. Finish height must not be below
   start height. \\
   {\bf OLC Plus}: A combination of Classic and FAI rules. 30\% of the FAI score
   are added to the Classic score. \\
