@@ -358,7 +358,7 @@ Les règles du circuit peuvent être utilisées afin de répondre aux règles de
   {\bf OLC FAI}: Conforme aux règles du triangle FAI. Trois points de virage dont départ et arrivée. Pas de branche inférieure à 28\% de la longueur totale, sauf si la longueur totale est de plus de 500 km. Si plus de 500 km alors pas de branche de moins de 25\% ou de plus de 45\%, sinon aucune branche inférieure à 28\% du total. L'altitude d'arrivée ne doit pas être plus basse de l'altitude de départ moins 1000 mètres. \\
   {\bf OLC Classic}: Jusqu'à sept points de virage incluant le départ et l'arrivée. L'altitude d'arrivée ne doit pas être plus basse de l'altitude de départ moins 1000 mètres. \\
   {\bf OLC League}: ??????????????????????? A contest on top of the classic task optimisation, cutting
-  a 2.5 hours segment over max. 3 of the turns. Finish height must not be below
+  a 2 hours segment over max. 3 of the turns. Finish height must not be below
   start height. \\
   {\bf OLC Plus}: ????????????? A combination of Classic and FAI rules. 30\% of the FAI score
   are added to the Classic score. \\
