@@ -33,7 +33,7 @@ protected:
   bool enable_auto_zoom = true, dragging = false;
   bool init_defaults = false;
   unsigned zoom = 3;
-  unsigned last_zoom = 4;
+  unsigned last_zoom;
   static constexpr unsigned num_zoom_options = 5;
   Angle task_direction = Angle::Degrees(-1);
   GestureManager gestures;
@@ -73,6 +73,8 @@ public:
   }
 
   void SetAutoZoom(bool enabled);
+
+  void SaveZoom(unsigned value);
 
   void ToggleAutoZoom() {
     SetAutoZoom(!GetAutoZoom());
@@ -135,6 +137,8 @@ FlarmTrafficControl::OnCreate() noexcept
   Profile::GetEnum(ProfileKeys::FlarmSideData, side_display_type);
   enable_auto_zoom = settings.auto_zoom;
   enable_north_up = settings.north_up;
+  last_zoom = settings.radar_zoom;
+
   SetZoom(last_zoom);
 }
 
@@ -176,6 +180,17 @@ FlarmTrafficControl::SetAutoZoom(bool enabled)
   //auto_zoom->SetState(enabled);
 }
 
+/**
+ * save the zoom range in TrafficSettings and profile
+ */
+void
+FlarmTrafficControl::SaveZoom(unsigned zoom_value)
+{
+  TrafficSettings &settings = CommonInterface::SetUISettings().traffic;
+  settings.radar_zoom = zoom_value;
+  Profile::Set(ProfileKeys::FlarmRadarZoom, zoom_value);
+}
+
 void
 FlarmTrafficControl::CalcAutoZoom()
 {
@@ -207,7 +222,7 @@ FlarmTrafficControl::Update(Angle new_direction, const TrafficList &new_data,
 
   if (enable_auto_zoom || WarningMode()) {
     if (!init_defaults)
-      last_zoom = zoom;
+      SaveZoom(zoom);
     CalcAutoZoom();
     init_defaults = true;
   } else {
@@ -236,10 +251,11 @@ FlarmTrafficControl::ZoomOut()
   if (WarningMode())
     return;
 
-  init_defaults = false;
   if (zoom < num_zoom_options)
     SetZoom(zoom + 1);
 
+  SaveZoom(zoom);
+  init_defaults = false;
   SetAutoZoom(false);
 }
 
@@ -252,10 +268,11 @@ FlarmTrafficControl::ZoomIn()
   if (WarningMode())
     return;
 
-  init_defaults = false;
   if (zoom > 0)
     SetZoom(zoom - 1);
 
+  SaveZoom(zoom);
+  init_defaults = false;
   SetAutoZoom(false);
 }
 
