@@ -39,7 +39,7 @@ Item::ToPolarInfo() const noexcept
 }
 
 static constexpr Item default_polar = {
-  _T("LS-8 (15m)"), 325, 185, 70, -0.51, 115, -0.85, 173, -2.00, 10.5, 0.0, 108, 240,
+  _T("LS-8 (15m)"), 346, 185, 80, -0.59, 115, -0.76, 173, -2.00, 10.5, 190, 108, 240,
 };
 
 /**
