@@ -224,6 +224,7 @@ constexpr std::string_view InfoBoxTitleScale = "InfoBoxTitleScale";
 constexpr std::string_view FlarmSideData = "FlarmRadarSideData";
 constexpr std::string_view FlarmAutoZoom = "FlarmRadarAutoZoom";
 constexpr std::string_view FlarmNorthUp = "FlarmRadarNorthUp";
+constexpr std::string_view FlarmRadarZoom = "FlarmRadarZoom";
 
 constexpr std::string_view IgnoreNMEAChecksum = "IgnoreNMEAChecksum";
 constexpr std::string_view MapOrientation = "DisplayOrientation";
@@ -287,7 +288,4 @@ constexpr std::string_view WaveAssistant = "WaveAssistant";
 constexpr std::string_view MasterAudioVolume = "MasterAudioVolume";
 
 constexpr std::string_view RaspFile = "RaspFile";
-
-constexpr std::string_view StratuxHorizontalRange = "StratuxHorizontalRange";
-constexpr std::string_view StratuxVerticalRange = "StratuxVerticalRange";
 }
